--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   get_storage:
   carousel_slider: ^4.2.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
