--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - images/home/adv3.jfif
     - images/home/adv4.jpg
     - images/home/adv5.jpg
+    - images/login/login.png
 
 
 
