--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^4.2.0
   http: ^0.13.5
   flutter_lorem: ^2.0.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
