--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:label="clean_arch_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-
+       android:enableOnBackInvokedCallback="true"
+       android:exported="true"
        >
         <activity
 
@@ -16,7 +17,7 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize"
-            android:exported="true"
+
 
 
             >
