--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.5
   flutter_lorem: ^2.0.0
   device_preview: ^1.1.0
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
