--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_lorem: ^2.0.0
   device_preview: ^1.1.0
   date_format: ^2.0.7
+ # cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_test:
