--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   device_preview: ^1.1.0
   date_format: ^2.0.7
   cloud_firestore: ^4.4.5
+  firebase_auth: ^4.3.0
+  #image_picker: ^0.6.7+7
+  image_picker: ^0.8.7
+ # keyboard_actions: ^4.2.0
+  image: ^4.0.15
+  firebase_storage: ^11.0.16
 
 dev_dependencies:
   flutter_test:
