--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
  # keyboard_actions: ^4.2.0
   image: ^4.0.15
   firebase_storage: ^11.0.16
+  flutter_datetime_picker: ^1.5.1
 
 
 dev_dependencies:
