--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image: ^4.0.15
   firebase_storage: ^11.0.16
   flutter_datetime_picker: ^1.5.1
+  toast: ^0.3.0
 
 
 dev_dependencies:
