--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,35 +27,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.2.0
+  cloud_firestore: ^4.4.5
+  cupertino_icons: ^1.0.2
+  date_format: ^2.0.7
+  device_preview: ^1.1.0
+  firebase_auth: ^4.3.0
+  firebase_storage: ^11.0.16
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  get: ^4.6.5
-  shared_preferences: ^2.0.15
-  get_storage:
-  carousel_slider: ^4.2.0
-  http: ^0.13.5
-  flutter_lorem: ^2.0.0
-  device_preview: ^1.1.0
-  date_format: ^2.0.7
-  cloud_firestore: ^4.4.5
-  firebase_auth: ^4.3.0
-  #image_picker: ^0.6.7+7
-  image_picker: ^0.8.7
- # keyboard_actions: ^4.2.0
-  image: ^4.0.15
-  firebase_storage: ^11.0.16
   flutter_datetime_picker: ^1.5.1
+  flutter_lorem: ^2.0.0
+  #get: ^4.6.6
+  get_storage: null
+  http: ^0.13.5
+  image: ^4.0.15
+  image_picker: ^0.8.7
+  shared_preferences: ^2.0.15
   toast: ^0.3.0
 
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,10 +54,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -113,15 +105,10 @@ flutter:
     - images/home/adv4.jpg
     - images/home/adv5.jpg
     - images/login/login.png
-
-
-
-        # An image asset can refer to one or more resolution-specific "variants", see
+    # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
